--- a/landingsvc/landingsvc-deployment.yml
+++ b/landingsvc/landingsvc-deployment.yml
@@ -174,6 +174,38 @@ objects:
                   value: "false"
                 - name: SPRING_JPA_GENERATE_DDL
                   value: "true"
+                - name: FTP_SERVER
+                  value: vm1.atiila.id
+                - name: FTP_PORT
+                  value: "21"
+                - name: FTP_USERNAME
+                  value: testuser
+                - name: FTP_PASSWORD
+                  value: nop4ssword@2021
+                - name: DISBURSEMENT_FTPSOURCE_SERVER
+                  value: vm1.atiila.id
+                - name: DISBURSEMENT_FTPSOURCE_PORT
+                  value: "21"
+                - name: DISBURSEMENT_FTPSOURCE_USERNAME
+                  value: testuser
+                - name: DISBURSEMENT_FTPSOURCE_PASSWORD
+                  value: nop4ssword@2021
+                - name: DISBURSEMENT_FTPSOURCE_PATH
+                  value: /tmp/demo/dirc
+                - name: DISBURSEMENT_FTPSOURCE_PATHBACKUP
+                  value: /tmp/demo/backup
+                - name: DISBURSEMENT_FTPSOURCE_LISTFILES
+                  value:
+                - name: DISBURSEMENT_FTPDESTINATION_SERVER
+                  value: localhost
+                - name: DISBURSEMENT_FTPDESTINATION_PORT
+                  value: "21"
+                - name: DISBURSEMENT_FTPDESTINATION_USERNAME
+                  value: one
+                - name: DISBURSEMENT_FTPDESTINATION_PASSWORD
+                  value: "1234"
+                - name: DISBURSEMENT_FTPDESTINATION_PATH
+                  value: /upload
               ports:
                 - name: http
                   containerPort: ${{APP_PORT}}
